# SearchEngine-Fixed-

./: CMakeLists.txt
include/: ConverterJSON.h  InvertedIndex.h  server.h
src/: CMakeLists.txt  InvertedIndex.cpp
tests/: CMakeLists.txt  index_test.cpp
